--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.2",
     "firebase": "^5.2.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.2",
     "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5",
     "vuetify": "^1.1.7"
   },
   "devDependencies": {
